[package]
name = "matching_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
hyper = { version = "0.14.16", features = ["http1", "http2", "tcp", "server"]}
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"]}